# wato_monorepo

./: .clang-format  .clang-format-ignore  .cpplint.cfg  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  DEVELOPING.md  LICENSE  NOTTESTED.pre-commit-config.yaml  README.md  RUNBOOK.md  Tiltfile  attachCarla.sh  attachCarlaBridge.sh  changes.patch  commands.txt  dev_config.local.sh  dev_config.sh  docker-compose.yaml  get-docker.sh  hikrobot.xml  logs.out  logs2.out  rebuild_trt_engine.py  record_all.sh  slurm_job.sh  test.sh  wato_config.yaml  watod  watod-config.sh  watod2  watod2-config.sh
.claude/: CLAUDE.md
src/action/ackermann_pure_pursuit/: CMakeLists.txt  README.md  package.xml
src/action/ackermann_pure_pursuit/config/: params.yaml
src/action/ackermann_pure_pursuit/launch/: ackermann_pure_pursuit.launch.py
src/action/ackermann_pure_pursuit/src/: main.cpp  pure_pursuit_node.cpp
src/action/behaviour_tree/: CMakeLists.txt  package.xml
src/action/behaviour_tree/config/: params.yaml
src/action/behaviour_tree/launch/: behaviour_tree.launch.py
src/action/behaviour_tree/src/: behaviour_tree.cpp
src/action/freeroam_planner/: CMakeLists.txt  README.md  package.xml
src/action/freeroam_planner/config/: params.yaml
src/action/freeroam_planner/launch/: freeroam_planner.launch.py
src/action/freeroam_planner/src/: astar.cpp  freeroam_planner_node.cpp  main.cpp
src/action/lattice_planning_markers/: CMakeLists.txt  package.xml
src/action/lattice_planning_markers/config/: lattice_planning_markers_params.yaml
src/action/lattice_planning_markers/src/: lattice_planning_markers_node.cpp
src/action/local_planning/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/action/local_planning/config/: local_planner_params.yaml  params.yaml
src/action/local_planning/launch/: local_planning.launch.py
src/action/local_planning/local_planning/: lattice_planner.py  local_planning_node.py  planning_node.py
src/action/local_planning/src/: local_planner_core.cpp  local_planner_node.cpp
src/action/model_predictive_control/: CMakeLists.txt  mpc.py  package.xml  requirements.txt  setup.cfg  setup.py
src/action/model_predictive_control/config/: params.yaml
src/action/model_predictive_control/launch/: model_predictive_control.launch.py  mpc.launch.py
src/action/model_predictive_control/model_predictive_control/: boxconstraint.py  carla_node.py  helper.py  mpc.py  mpc_core.py  mpc_node.py  sample_node.py
src/action/model_predictive_control/model_predictive_path_integral/: helper.py  mppi_core.py  mppi_node.py
src/action/model_predictive_control/test/: mpc_test.py
src/action/model_predictive_path_integral/: CMakeLists.txt  package.xml
src/action/model_predictive_path_integral/inlcude/: mppi_core.hpp
src/action/model_predictive_path_integral/src/: mppi_core.cpp  mppi_node.cpp
src/action/mpc_controller/: CMakeLists.txt  README.md  package.xml
src/action/mpc_controller/config/: mpc_controller.yaml
src/action/mpc_controller/docs/: DEVELOPING.md
src/action/mpc_controller/src/: bicycle_model.cpp  mpc_controller_node.cpp  mpc_core.cpp
src/action/mpc_controller/test/: test_bicycle_model.cpp  test_mpc_core.cpp
src/action/mppi_control/: CMakeLists.txt  package.xml
src/action/mppi_control/config/: mppi_params.yaml
src/action/mppi_control/include/: critics.hpp  helpers.hpp  mppi_core.hpp
src/action/mppi_control/launch/: mppi_launch.yaml
src/action/mppi_control/msg/: PathWithSpeed.msg
src/action/mppi_control/src/: MPPI_README.md  critics.cpp  mppi_core.cpp  mppi_node.cpp  reference_finder.cpp
src/action/osqp_eigen_vendor/: CMakeLists.txt  package.xml
src/action/osqp_eigen_vendor/cmake/: osqp_eigen_vendor-config.cmake.in
src/action/osqp_eigen_vendor/env_hook/: osqp_eigen_vendor_paths.sh.in
src/action/pure_pursuit_control/: CMakeLists.txt  package.xml
src/action/pure_pursuit_control/config/: params.yaml
src/action/pure_pursuit_control/include/: pure_pursuit_control.hpp
src/action/pure_pursuit_control/launch/: pure_pursuit_control.py
src/action/pure_pursuit_control/src/: pure_pursuit_control.cpp
src/action/trajectory_planner/: CMakeLists.txt  README.md  package.xml
src/action/wato_trajectory_msgs/: CMakeLists.txt  package.xml
src/action/wato_trajectory_planner/: CMakeLists.txt  README.md  package.xml
src/camera_detection/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/camera_detection/camera_detection/: yolov5_detection.py  yolov8_detection.py
src/camera_detection/config/: deepracer_config.yaml  nuscenes_config.yaml  sim_config.yaml
src/camera_detection/install/: local_setup.sh  setup.sh
src/camera_detection/launch/: sim_launch.py
src/camera_detection/log/: latest_build
src/lidar_object_detection/: CMakeLists.txt  lidar_detector.cpp  lidar_detector.h  main.cpp  package.xml  setup.py
src/lidar_object_detection/cmake/: pprt.cmake
src/lidar_object_detection/include/: params.h  pointpillar.h
src/lidar_object_detection/install/: local_setup.sh  setup.sh
src/lidar_object_detection/launch/: lidar_object_detection.launch
src/lidar_object_detection/log/: latest_build
src/lidar_object_detection/src/: lidar_detection_node.cpp  pointpillar.cpp  reactive_node.cpp
src/lidar_publisher/: CMakeLists.txt  README.md  cloud_data.h  lidar_publisher.cpp  lidar_publisher.h  main.cpp  package.xml  setup.cfg
src/lidar_publisher/launch/: lidar_publisher.launch  lidar_publisher.launch.py
src/multimodal_object_detection/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/multimodal_object_detection/cmake/: PCL.cmake
src/multimodal_object_detection/src/: bevfusion_node.cpp  reactive_node.cpp
src/sensor_fusion_publisher/: CMakeLists.txt  package.xml
src/sensor_fusion_publisher/src/: sensor_fusion_publisher.cpp
src/wato_test/: CMakeLists.txt  DEVELOPING.md  README.md  package.xml  wato_test-extras.cmake
src/wato_test/cmake/: add_wato_test.cmake
src/wato_test/src/: test_executor_fixture.cpp
src/wato_test/test/: test_basic_example.cpp  test_with_ros.cpp
(+3612 files in other folders)
