<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_detection</name>
  <version>0.0.0</version>
  <description>The camera detection package</description>
  <maintainer email="j89leung@watonomous.ca">Justin</maintainer>
  <license>TODO: License declaration</license>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>common_msgs</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
