<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>model_predictive_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="e23zhou@uwaterloo.ca">bolty</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>path_planning_msgs</exec_depend>

  <exec_depend>python3-yaml</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
